# Manipulando-BD

./: .gitignore  main.py  pyproject.toml  test.py  teste-main.py
DB/configs/: connection.py
DB/entities/: User.py
DB/repository/: user_repository.py
