[tool.poetry]
name = "teste banco de dados"
version = "0.1.0"
description = ""
authors = ["Guaricaya <rafaelbarros240@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
